# full-ai-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  ALL_TASKS_COMPLETE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROJECT_COMPLETION_REPORT.md  README.md  docker-compose.yml  pyproject.toml  verify_installation.py
.github/workflows/: ci.yml
.kiro/specs/ai-agent-system/: design.md  requirements.md  tasks.md
config/: __init__.py  logging_config.py  test_config.py
docs/: API.md  DEPLOYMENT.md  SETUP.md
src/ai_agent/: __init__.py  config.py  models.py
src/ai_agent/api/: __init__.py  app.py  routes.py
src/ai_agent/context/: __init__.py  filter.py  injector.py  providers.py
src/ai_agent/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  token_tracker.py
src/ai_agent/memory/: __init__.py  long_term.py  manager.py  short_term.py
src/ai_agent/monitoring/: __init__.py  feedback.py  metrics.py
src/ai_agent/orchestration/: __init__.py  error_handler.py  orchestrator.py  session_manager.py
src/ai_agent/prompts/: __init__.py  manager.py  renderer.py  template.py
src/ai_agent/reasoning/: __init__.py  decomposer.py  engine.py  executor.py
src/ai_agent/safety/: __init__.py  bias_detector.py  filter.py  moderator.py
src/ai_agent/tools/: __init__.py  executor.py  manager.py  registry.py
tests/: __init__.py  test_all_components.py  test_api.py  test_config.py  test_integration.py  test_llm_providers.py  test_memory.py  test_models.py  test_project_setup.py  test_prompts.py  test_properties_config.py  test_properties_llm.py
